# simple_chat

./: .gitignore  CMakeLists.txt  Makefile  chatsession.cpp  chatsession.h  chatsession.ui  client  client.cpp  connect_session.cpp  connect_session.h  connect_session.ui  main.cpp  message_server.cpp  message_server.h  server  server.cpp
cli_version/: message_server.cpp  message_server.h  simple_chat.cpp
cli_version/deprecated/: client.cpp  server.cpp
tests/simple_chat_testing/: CMakeLists.txt  tst_functional_testing.cpp
